--- a/Dasharam_web_admin_react/package.json
+++ b/Dasharam_web_admin_react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/recoil": "^0.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
