--- a/Dasharam_web_admin_react/package.json
+++ b/Dasharam_web_admin_react/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@types/recoil": "^0.0.9",
+    "firebase": "^10.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
