--- a/Dasharam_web_admin_react/package.json
+++ b/Dasharam_web_admin_react/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/recoil": "^0.0.9",
     "firebase": "^10.13.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
