--- a/Dasharam_web_admin_react/package.json
+++ b/Dasharam_web_admin_react/package.json
@@ -5,40 +5,40 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": " vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.3",
-    "@mui/material": "^6.1.3",
-    "@types/js-cookie": "^3.0.6",
-    "@types/recoil": "^0.0.9",
-    "firebase": "^10.13.2",
-    "js-cookie": "^3.0.5",
-    "react": "^18.3.1",
-    "react-datepicker": "^7.4.0",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
-    "recoil": "^0.7.7"
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "6.1.3",
+    "@mui/material": "6.1.3",
+    "@types/js-cookie": "3.0.6",
+    "@types/recoil": "0.0.1",
+    "firebase": "10.14.1",
+    "js-cookie": "3.0.5",
+    "react": "18.3.1",
+    "react-datepicker": "7.4.0",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.27.0",
+    "react-toastify": "10.0.6",
+    "recoil": "0.7.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "@eslint/js": "9.12.0",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react": "4.3.2",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.12.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-refresh": "0.4.12",
+    "globals": "15.11.0",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.13",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.8.1",
+    "vite": "5.4.8"
   }
 }
