--- a/Admin_Teacher_Frontend/package.json
+++ b/Admin_Teacher_Frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "6.1.3",
     "@types/js-cookie": "3.0.6",
     "@types/recoil": "0.0.1",
+    "axios": "^1.7.9",
     "firebase": "10.14.1",
     "framer-motion": "^11.11.11",
     "js-cookie": "3.0.5",
