--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
