[Modify] Fixed bug

--- a/dasaram_app/android/build.gradle
+++ b/dasaram_app/android/build.gradle
@@ -1,25 +1,31 @@
-plugins {
-  // ...
+buildscript {
+    ext.kotlin_version = '1.9.10'
+    repositories {
+        google()
+        mavenCentral()
+    }
 
-  // Add the dependency for the Google services Gradle plugin
-  id 'com.google.gms.google-services' version '4.4.2' apply false
-  id 'com.android.application' version '8.2.1' apply false
-  id 'com.android.library' version '8.2.1' apply false
-
+    dependencies {
+        // AGP version is set in settings.gradle.
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.android.tools.build:gradle:8.2.1'
+    }
 }
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
-    
 }
-rootProject.buildDir = "../build"
+
+rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
-    project.evaluationDependsOn(":app")
+    project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
