--- a/Admin_Teacher_Frontend/package.json
+++ b/Admin_Teacher_Frontend/package.json
@@ -15,11 +15,14 @@
     "@mui/icons-material": "6.1.3",
     "@mui/material": "6.1.3",
     "@types/js-cookie": "3.0.6",
+    "@types/jspdf": "^2.0.0",
     "@types/recoil": "0.0.1",
     "axios": "^1.7.9",
     "firebase": "10.14.1",
     "framer-motion": "^11.11.11",
     "js-cookie": "3.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lottie-web": "^5.12.2",
     "react": "18.3.1",
     "react-datepicker": "7.4.0",
