--- a/dasaram_app/android/app/build.gradle
+++ b/dasaram_app/android/app/build.gradle
@@ -14,6 +14,7 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -23,6 +24,7 @@ android {
         defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.dasaram.flutternotification"
+        
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 21
@@ -30,6 +32,11 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
+
+    dependencies {
+    // Your other dependencies
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+}
 
 
 
