--- a/dasaram_app/android/.gitignore
+++ b/dasaram_app/android/.gitignore
@@ -11,3 +11,6 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+# Ignore google-services.json
+/android/app/google-services.json
