--- a/dasaram_app/android/.gitignore
+++ b/dasaram_app/android/.gitignore
@@ -5,6 +5,7 @@ gradle-wrapper.jar
 /gradlew.bat
 /local.properties
 GeneratedPluginRegistrant.java
+/app/google-services.json
 
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/to/reference-keystore
@@ -12,5 +13,3 @@ key.properties
 **/*.keystore
 **/*.jks
 
-# Ignore google-services.json
-/android/app/google-services.json
