--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -12,6 +12,11 @@
     "routes": [
       {
         "src": "/(.*)",  
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+          "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Authorization"
+        },
         "dest": "/dist/index.js"  
       }
     ]
