--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^7.5.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "serverless-http": "^3.2.0",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
